add endpoint resendOtp and update some controllers
